@@ -127,6 +127,12 @@ details.
 
 Boolean. Will run test methods in a random order.
 
+=item * C<randomize_classes>
+
+Boolean. Will run test classes in a random order. Note that if you specify an
+explicit list of classes in C<test_classes>, these classes will be run in the
+order you specify.
+
 =item * C<builder>
 
 Defaults to C<< Test::Builder->new >>. You can supply your own builder if you
