@@ -1,0 +1,9 @@
+package A;
+
+use Test::Class::Moose;
+
+sub test_a {
+    ok( 1, 'package A' );
+}
+
+1;
