@@ -1,0 +1,9 @@
+package B;
+
+use Test::Class::Moose;
+
+sub test_b {
+    ok( 1, 'package B' );
+}
+
+1;
