@@ -1,0 +1,9 @@
+package C;
+
+use Test::Class::Moose;
+
+sub test_c {
+    ok( 1, 'package C' );
+}
+
+1;
