@@ -1,0 +1,9 @@
+package D;
+
+use Test::Class::Moose;
+
+sub test_d {
+    ok( 1, 'package D' );
+}
+
+1;
