@@ -1,0 +1,9 @@
+package E;
+
+use Test::Class::Moose;
+
+sub test_e {
+    ok( 1, 'package E' );
+}
+
+1;
